--- a/learning/frontend/.travis.yml
+++ b/learning/frontend/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t 123keithqui/docker_learning -f Dockerfile.dev .
+  - docker build -t keithqui/docker_learning -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true USERNAME/docker-react npm run test
+  - docker run -e CI=true keithqui/docker_learning npm run test
